[package]
name = "sd-journal"
version = "0.1.1"
authors = ["Christian Klaue <mail@ck76.de>"]
edition = "2018"
description = "A wrapper for sd-journal implemented in libsystemd."
readme = "README.md"
repository = "https://gitlab.com/ente76/sd-journal"
license = "AGPL-3.0"
keywords = ["systemd", "journald", "sd-journal", "journal", "logging"]
categories = ["os::linux-apis", "external-ffi-bindings", "api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["experimental", "td_chrono"]
experimental = []
td_chrono = ["chrono"]

[dependencies]
sd-id128 = "0.1"
sd-sys = "0.1"
libc = "0.2"
chrono = {version = "0.4", optional = true}
