[package]
name = "sd-journal"
version = "0.1.1"
authors = ["Christian Klaue <mail@ck76.de>"]
edition = "2018"
description = "A wrapper for sd-journal implemented in libsystemd."
readme = "README.md"
repository = "https://gitlab.com/ente76/sd-journal"
license = "AGPL-3.0"
keywords = ["systemd", "journald", "sd-journal", "journal", "logging"]
categories = ["os::linux-apis", "external-ffi-bindings", "api-bindings"]

[features]
default = ["246"]

246 = []
245 = []
229 = []

[dependencies]
sd-sys = {version="1"}
sd-id128 = {version="1"}
libc = "0.2"
chrono = "0.4"
